# import_parent

./: .gitignore  .readthedocs.yaml  __init__py  import_parent.py  pyproject.toml  readme.md  src.py
.github/workflows/: lint-ruff.yml  pypi-publish.yml
docs/: conf.py  index.md  requirements.txt  validate_doc_build.sh
docs/explanations/: index.md  why_import_parent.md
docs/howtos/: index.md  quick_import.md
docs/reference/: index.md
docs/tutorials/: getting_started.md  index.md
tests/: test_import_parent.py
