[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "import_parent"
version = "0.0.2"
authors = [
  { name="Michael Boerman", email="michaelboerman@hey.com" },
]
description = "Python package that allows a user to easily import local functions from parent folders."
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/michaelboerman/import_parent"
Issues = "https://github.com/michaelboerman/import_parent/issues"